--- a/plugin-sample/plugin-demo1/app/src/main/res/layout/activity_plugin_fragment.xml
+++ b/plugin-sample/plugin-demo1/app/src/main/res/layout/activity_plugin_fragment.xml
@@ -15,7 +15,7 @@
     <!-- line -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:background="@color/colorAccent"
+        android:background="#123456"
         android:layout_height="1dp"/>
 
     <FrameLayout
