--- a/host-sample/host/app/src/main/res/layout/activity_main.xml
+++ b/host-sample/host/app/src/main/res/layout/activity_main.xml
@@ -64,9 +64,9 @@
         android:text="@string/installPluginFromAssets" />
 
     <Button
-        android:id="@+id/btn_install_apk_from_sdcard"
+        android:id="@+id/btn_start_demo2"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:text="@string/installPluginFromSdcard" />
+        android:text="btn_start_demo2" />
 </LinearLayout>
